--- a/Clasificación.html
+++ b/Clasificación.html
@@ -1,1 +1,44 @@
+<!DOCTYPE html>
+<html lang="es">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ecosort - Bello, Antioquia</title>
+    <link rel="stylesheet" href="Style.css">
+</head>
+
+<body>
+    <header>
+        <h1>Ecosort - Clasificación y Gestión de Residuos</h1>
+        <nav>
+            <a href="Clasificación.html">Clasificación</a>
+            <a href="puntos">Puntos de Recolección</a>
+            <a href="educacion">Educación</a>
+            <a href="Contacto.html">Contacto</a>
+        </nav>
+    </header>
+
+    <main>
+        <!-- Sección de Clasificación -->
+        <section id="clasificacion">
+            <h2>Clasifica tus Residuos</h2>
+            <p>Selecciona un tipo de residuo para saber cómo gestionarlo correctamente:</p>
+            <select id="residuo-select">
+                <option value="">-- Selecciona un residuo --</option>
+                <option value="organico">Orgánico</option>
+                <option value="plastico">Plástico</option>
+                <option value="papel">Papel</option>
+                <option value="vidrio">Vidrio</option>
+                <option value="peligroso">Peligroso</option>
+            </select>
+            <p id="resultado-clasificacion"></p>
+        </section>
+
+        <!-- Sección de Puntos de Recolección -->
+
+        <!-- Sección Educativa -->
+    </main>
+</body>
+
+</html>
