--- a/Index.html
+++ b/Index.html
@@ -12,41 +12,13 @@
     <header>
         <h1>Ecosort - Clasificación y Gestión de Residuos</h1>
         <nav>
-            <a href="#clasificacion">Clasificación</a>
-            <a href="#puntos">Puntos de Recolección</a>
-            <a href="#educacion">Educación</a>
-            <a href="#contacto">Contacto</a>
+            <a href="Clasificación.html">Clasificación</a>
+            <a href="Puntos_recolección.html">Puntos de Recolección</a>
+            <a href="Educación.html">Educación</a>
+            <a href="Contacto.html">Contacto</a>
         </nav>
     </header>
 
-    <main>
-        <!-- Sección de Clasificación -->
-        <section id="clasificacion">
-            <h2>Clasifica tus Residuos</h2>
-            <p>Selecciona un tipo de residuo para saber cómo gestionarlo correctamente:</p>
-            <select id="residuo-select">
-                <option value="">-- Selecciona un residuo --</option>
-                <option value="organico">Orgánico</option>
-                <option value="plastico">Plástico</option>
-                <option value="papel">Papel</option>
-                <option value="vidrio">Vidrio</option>
-                <option value="peligroso">Peligroso</option>
-            </select>
-            <p id="resultado-clasificacion"></p>
-        </section>
-
-        <!-- Sección de Puntos de Recolección -->
-        <section id="puntos">
-            <h2>Puntos de Recolección en Bello</h2>
-            <div id="mapa"></div>
-        </section>
-
-        <!-- Sección Educativa -->
-        <section id="educacion">
-            <h2>Aprende a Manejar tus Residuos</h2>
-            <p>Consulta cómo reducir, reutilizar y reciclar de forma eficiente.</p>
-        </section>
-    </main>
 
     <footer>
         <p>© 2024 Ecosort - Bello, Antioquia</p>
