--- a/Educación.html
+++ b/Educación.html
@@ -1,1 +1,30 @@
+<!DOCTYPE html>
+<html lang="es">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ecosort - Bello, Antioquia</title>
+    <link rel="stylesheet" href="Style.css">
+</head>
+
+<body>
+    <header>
+        <h1>Ecosort - Clasificación y Gestión de Residuos</h1>
+        <nav>
+            <a href="Clasificación.html">Clasificación</a>
+            <a href="Puntos_recolección.html">Puntos de Recolección</a>
+            <a href="Educación.html">Educación</a>
+            <a href="Contacto.html">Contacto</a>
+        </nav>
+    </header>
+
+    <main>
+        <section id="educacion">
+            <h2>Aprende a Manejar tus Residuos</h2>
+            <p>Consulta cómo reducir, reutilizar y reciclar de forma eficiente.</p>
+        </section>
+    </main>
+</body>
+
+</html>
